# video-audio-pi

./: Cargo.toml  build-raspy.sh  deploy.sh  docker-compose.yaml
video-streaming/: Cargo.toml
video-streaming/src/: audio.rs  main.rs
