[package]
name = "video-streaming"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.56"
rav1e = "0.5.1"
serde = { version = "1.0.136", features = ["derive"] }
base64 = "0.13.0"
serde_json = "1.0"
image = "0.23.14"
env_logger = "0.9.0"
# futures-util = { version = "0.3.8", default-features = false, features = ["async-await", "sink", "std"] }
tokio = { version = "1.17.0", features = ["full"] }
async-std = { version = "1.12.0", features = ["attributes", "tokio1"] }
bus = "2.2.3"
tide-websockets = "0.4.0"
tide = "0.16.0"
tokio-stream = {version =  "0.1.11", features = ["sync"]}
# rust-portaudio = "0.3.1"
rodio = "0.16.0"
wav = "1.0.0"

[dependencies.nokhwa]
version = "0.9.4"
features = ["input-v4l"]