[package]
name = "video-streaming"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.56"
# rav1e = "0.5.1"
serde = { version = "1.0.136", features = ["derive"] }
base64 = "0.13.0"
serde_json = "1.0"
image = "0.23.14"
env_logger = "0.9.0"
# futures-util = { version = "0.3.8", default-features = false, features = ["async-await", "sink", "std"] }
tokio = { version = "1.17.0", features = ["full"] }
async-std = { version = "1.12.0", features = ["attributes", "tokio1"] }
bus = "2.2.3"
tide-websockets = "0.4.0"
tide = "0.16.0"
tokio-stream = {version =  "0.1.11", features = ["sync"]}
rodio = {version = "0.16.0", features = ["symphonia-wav", "wav", "flac"]}
# wav = "1.0.0"
hound = "3.5.0"
portaudio = "0.6.4"
cpal = "0.13.5"
color-eyre = "0.6.1"
dasp = { version = "0.11.0", features = ["signal", "interpolate", "interpolate-linear"] }
clap = { version = "3.1.18", features = ["derive"] }
ctrlc = "3.2.2"
chrono = "0.4.19"
symphonia = {version = "0.5.0", features = ["isomp4", "mp3", "aac", "pcm", "wav", "flac", "alac", "mkv", "ogg"] }
log = "0.4.17"
fon = "0.6.0"


[dependencies.nokhwa]
version = "0.9.4"
features = ["input-v4l"]